--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
+dependencies = [
+    "numpy",
+]
 dynamic = ["version"]
 [project.optional-dependencies]
 tests = [
