--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ name = "_bampy"
 crate-type = ["cdylib"]
 
 [dependencies]
-noodles = { version = "0.97.0", features = ["bam", "bgzf", "core", "sam"] }
+anyhow = "1.0.98"
+noodles = { version = "0.97.0", features = ["bam", "bgzf", "core", "csi", "sam"] }
 numpy = "0.24.0"
 pyo3 = "0.24.0"
