--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.8,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "bampy"
+name = "lazybam"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
@@ -21,4 +21,4 @@ tests = [
 [tool.maturin]
 python-source = "python"
 features = ["pyo3/extension-module"]
-module-name = "bampy._bampy"
+module-name = "lazybam"
